MH-4385: review UI now searches for media files with type */preview, multi stream preview, corrected error in flah-preview.http encoding profile in engage-movies.properties
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7748 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
@@ -53,7 +53,7 @@
             if (previewTag != null) {
               var videoUrl = $(previewTag).parent().parent().find('url').text();
               //alert("videoUrl: " + videoUrl);
-              $('#video-url-container').attr('href',videoUrl).text(videoUrl);
+              //$('#video-url-container').attr('href',videoUrl).text(videoUrl);
               var url = '../../../engage/ui/preview.html?videoUrl=' + videoUrl;
               $('#player-container').attr('src', url);
             } else {
@@ -88,8 +88,8 @@
       <iframe id="player-container"></iframe>
     </center>
     <center>
-      <span>Video URL:<a id="video-url-container" href=""></a></span>
-      <br>
+      <!-- span>Video URL:<a id="video-url-container" href=""></a></span>
+      <br -->
     </center>
     <div id="metadata-container">
       <ul class="no-bullets formField-list fl-controls-right">
