--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Hold for caption upload</title>
+    <title>Hold for review</title>
     <link rel="stylesheet" type="text/css" href="../../../admin/infusion-1.1.2/fss/css/fss-reset.css">
     <link rel="stylesheet" type="text/css" href="../../../admin/infusion-1.1.2/fss/css/fss-layout.css">
     <link rel="stylesheet" type="text/css" href="../../../admin/css/admin.css">
@@ -11,6 +11,31 @@
     </style>
     <script type="text/javascript" src="../../../admin/jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript">
+
+      var PLAYER_URL = '../../../engage/ui/embed.html';
+
+      function createDoc(rootEl, rootNS){
+        var doc = null;
+        //Create a DOM Document, methods vary between browsers, e.g. IE and Firefox
+        if(document.implementation && document.implementation.createDocument){ //Firefox, Opera, Safari, Chrome, etc.
+          doc = document.implementation.createDocument(rootNS, rootEl, null);
+        }else{ // IE
+          doc = new ActiveXObject('MSXML2.DOMDocument');
+          doc.loadXML('<' + rootEl + ' xmlns="' + rootNS + '"></' + rootEl + '>');
+        }
+        return doc;
+      }
+
+      function xmlToString(doc) {
+        if(typeof XMLSerializer != 'undefined'){
+          return (new XMLSerializer()).serializeToString(doc);
+        } else if(doc.xml) {
+          return doc.xml;
+        } else {
+          return '';
+        }
+      }
+
       $(document).ready(function() {
         var id = parent.document.getElementById("holdWorkflowId").value;
         // Event edit link clicked
@@ -22,11 +47,13 @@
         // load preview player and metadata
         $.ajax({
           url : '../../../workflow/rest/instance/' + id + '.xml',
-          dataType : 'xml',    // or XML..
-          success : function(data) {    
+          dataType : 'xml',    
+          success : function(data) {
+            // put mediapackge into form (for upload of captions file)
+            var mp = xmlToString(data).match(/<mediapackage(.*)mediapackage>/)[0];
+            $('#mediaPackage').val(mp);
             // load metadata
             var catalogUrl = $(data.documentElement).find("mediapackage > metadata > catalog[type='dublincore/episode'] > url").text();
-            catalogUrl += '/dublincore.xml';    // FIXME workaround MH-3993
             $.ajax({
               url : catalogUrl,
               dataType: 'xml',
@@ -34,7 +61,6 @@
               success: function(data) {
                 $(data.documentElement).children().each(function(index, elm) {
                   var tagName = elm.tagName.split(/:/)[1];
-                  //alert(tagName);
                   if ($(elm).text() != '') {
                     $('#container-'+tagName).css('display','block');
                     var text = $('#meta-'+tagName).text();
@@ -48,21 +74,31 @@
                 parent.Recordings.adjustHoldActionPanelHeight();
               }
             });
-            // get neccessary data to call the preview player
-            var previewTag = $(data.documentElement).find("mediapackage > media > track > tags > tag:contains('preview')").first();
-            if (previewTag != null) {
-              var videoUrl = $(previewTag).parent().parent().find('url').text();
-              //alert("videoUrl: " + videoUrl);
-              //$('#video-url-container').attr('href',videoUrl).text(videoUrl);
-              var url = '../../../engage/ui/preview.html?videoUrl=' + videoUrl;
+            // call preview player
+            var previewFiles = new Array();
+            $(data.documentElement).find("mediapackage > media > track").each(function(index, elm) {
+              if ($(elm).attr('type').split(/\//)[1] == 'preview') {
+                previewFiles.push($(elm).find('url').text());
+              }
+            });
+            if (previewFiles.length > 0) {
+              var url = PLAYER_URL + '?';
+              for (var i = 0; i < previewFiles.length; i++) {
+                if (i == 0) {
+                  url += 'videoUrl=';
+                } else {
+                  url += '&videoUrl' + (i+1) + '=';
+                }
+                url += previewFiles[i];
+              }
               $('#player-container').attr('src', url);
             } else {
-              $('#player-container').text('No preview encoded track found in MediaPackage');
+              $('#player-container').text("No preview media files found for this media package.");
             }
             // show links to source media
             var singleFile = true;
             $(data.documentElement).find("mediapackage > media > track").each(function(index, elm) {
-              if (($(elm).attr('type').split(/\//)[1] == 'source') && ($(elm).find("tags > tag:contains('preview')").empty())) {
+              if ($(elm).attr('type').split(/\//)[1] == 'source') {
                 var link = document.createElement('a');
                 var url = $(elm).find('url').text();
                 $(link).attr('href', url);
@@ -87,43 +123,49 @@
     <center>
       <iframe id="player-container"></iframe>
     </center>
-    <center>
-      <!-- span>Video URL:<a id="video-url-container" href=""></a></span>
-      <br -->
-    </center>
     <div id="metadata-container">
-      <ul class="no-bullets formField-list fl-controls-right">
-        <!-- field: File -->
-        <li class="ui-helper-clearfix">
-          <label class="fl-label"><span id="i18n_files_label">File(s)</span>:</label>
-          <div id="files"></div>
-        </li>
-        <!-- field: Title -->
-        <li id="container-title" class="ui-helper-clearfix" style="display:none;">
-          <label class="fl-label"><span id="i18n_title_label">Title</span>:</label>
-          <span id="meta-title"></span>
-        </li>
-        <!-- field: Presenter -->
-        <li id="container-creator" class="ui-helper-clearfix" style="display:none;">
-          <label class="fl-label"><span id="i18n_presenter_label">Presenter(s)</span>:</label>
-          <span id="meta-creator"></span>
-        </li>
-        <!-- field: Series -->
-        <li id="container-isPartOf" class="ui-helper-clearfix" style="display:none;">
-          <label class="fl-label"><span id="i18n_dept_label">Series</span>:</label>
-          <span id="meta-isPartOf"></span>
-        </li>
-        <!-- field: Description -->
-        <li id="container-description" class="ui-helper-clearfix" style="display:none;">
-          <label class="fl-label"><span id="i18n_dept_label">Description</span>:</label>
-          <span id="meta-description"></span>
-        </li>
-        <!-- field: Distribution channels -->
-        <li id="container-dist" class="ui-helper-clearfix" style="display:none;">
-          <label class="fl-label"><span id="i18n_dept_label">Distribution channels</span>:</label>
-          <span id="meta-dist"></span>
-        </li>
-      </ul>
+      <form action="../../../ingest/rest/addCatalog" method="POST" enctype="multipart/form-data">
+        <ul class="no-bullets formField-list fl-controls-right">
+          <!-- captions files upload -->
+          <li class="ui-helper-clearfix">
+            <label class="fl-label"><span id="i18n_captions_upload_label">Upload a captions files</span>:</label>
+            <input type="hidden" name="falvor" value="captions/timedtext">
+            <input type="hidden" id="mediaPackage" name="mediaPackage" value="">
+            <input type="file" name="file">
+            <input type="submit" value="Upload file">
+          </li>
+          <!-- field: File -->
+          <li class="ui-helper-clearfix">
+            <label class="fl-label"><span id="i18n_files_label">File(s)</span>:</label>
+            <div id="files"></div>
+          </li>
+          <!-- field: Title -->
+          <li id="container-title" class="ui-helper-clearfix" style="display:none;">
+            <label class="fl-label"><span id="i18n_title_label">Title</span>:</label>
+            <span id="meta-title"></span>
+          </li>
+          <!-- field: Presenter -->
+          <li id="container-creator" class="ui-helper-clearfix" style="display:none;">
+            <label class="fl-label"><span id="i18n_presenter_label">Presenter(s)</span>:</label>
+            <span id="meta-creator"></span>
+          </li>
+          <!-- field: Series -->
+          <li id="container-isPartOf" class="ui-helper-clearfix" style="display:none;">
+            <label class="fl-label"><span id="i18n_dept_label">Series</span>:</label>
+            <span id="meta-isPartOf"></span>
+          </li>
+          <!-- field: Description -->
+          <li id="container-description" class="ui-helper-clearfix" style="display:none;">
+            <label class="fl-label"><span id="i18n_dept_label">Description</span>:</label>
+            <span id="meta-description"></span>
+          </li>
+          <!-- field: Distribution channels -->
+          <li id="container-dist" class="ui-helper-clearfix" style="display:none;">
+            <label class="fl-label"><span id="i18n_dept_label">Distribution channels</span>:</label>
+            <span id="meta-dist"></span>
+          </li>
+        </ul>
+      </form>
     </div>
   </body>
 </html>
