MH-4171: trying to fix safari issue with undefined function
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7754 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/download-dvd/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/download-dvd/index.html
@@ -14,7 +14,7 @@
           success : function(data) {    // get neccessary data to make the link to the DVD image working
             var elms = data.documentElement.getElementsByTagName('track');
             for (i in elms) {
-              if (elms[i].getAttribute('type').match(/dvd/)) {
+              if ((elms[i].getAttribute != undefined) && (elms[i].getAttribute('type').match(/dvd/))) {
                 $('#dvd-image-link').attr('href', elms[i].getElementsByTagName('url')[0].firstChild.data);
               }
             }
