--- a/modules/matterhorn-runtime-info-ui/src/main/resources/ui/login.html
+++ b/modules/matterhorn-runtime-info-ui/src/main/resources/ui/login.html
@@ -36,7 +36,7 @@
                                <tr><td>Password:</td><td><input type='password' name='j_password'/></td></tr>
                                <tr><td>Default</td><td>admin / opencast</td></tr>	
                                <tr><td><input type='checkbox' name='_spring_security_remember_me'/></td><td>Remember me on this computer.</td></tr>
-                               <tr><td><input name="submit" type="submit"/></td><td><input name="reset" type="reset"/></td></tr>
+                               <tr><td><input name="submit" type="submit" value="Login"/></td><td><input name="reset" type="reset"/></td></tr>
                            </table>
                        </form>
                        <h3>Login with OpenID Identity</h3>
@@ -44,7 +44,7 @@
                            <table>
                                <tr><td>Identity:</td><td><input type='text' name='openid_identifier'/></td></tr>
                                <tr><td><input type='checkbox' name='_spring_security_remember_me'></td><td>Remember me on this computer.</td></tr>
-                               <tr><td><input name="submit" type="submit"/></td><td><input name="reset" type="reset"/></td></tr>
+                               <tr><td><input name="submit" type="submit" value="Login"/></td><td><input name="reset" type="reset"/></td></tr>
                            </table>
                        </form>
                    </div>
