MH-4244 Changed submit button in AddSeriesUI
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7772 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/add_series.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/add_series.html
@@ -298,7 +298,7 @@
                 <ul class="fl-controls-right wu-reset field-list">
                   <li>
                     <label class="fl-label">&nbsp;</label>
-                    <input type="button" value="Submit" id="submitButton" class="mouseover-pointer control-button">
+                    <input type="button" value="Add Series" id="submitButton" class="mouseover-pointer control-button">
                     <input type="button" value="Cancel" id="cancelButton" class="mouseover-pointer control-button">
                   </li>
                   <li style="margin-top: 0.6em;">
