--- a/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
@@ -29,12 +29,13 @@
     <script type="text/javascript" src="jquery/plugins/jquery.client.js"></script>
     <script type="text/javascript" src="js/engage-ui.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/player-multi-hybrid-flash.js"></script> 
-    <script type="text/javascript" src="engage-hybrid-player/embed-hybrid-initialize.js"></script>
     <script type="text/javascript" src="shared_js/version.js"></script>
     <script type="text/javascript" src="js/jquery.timers-1.2.js"></script>
 
     <script type="text/javascript" src="js/segments.js"></script>
     <script type="text/javascript" src="js/embed.js"></script>
+    <script type="text/javascript" src="engage-hybrid-player/embed-hybrid-initialize.js"></script>
+    
   </head>
 
   <body>
@@ -89,7 +90,7 @@
             <div id="oc_volume-dropdown-div">
                 <div id="oc_volume-slider">
                     <div id="slider_volume_Rail" class="oc_slider-volume-Rail" title="Volume" alt="Volume">
-                        <label id="volumeLabel" for="slider_volume_Rail" class="oc_offScreen-hidden">Volume</label>
+                        <label id="volumeLabel" for="slider_volume_Rail" class="oc_offScreen-hidden"></label>
                         <input id="slider_volume_Thumb" class="oc_slider-volume-Thumb" type="submit" value=""></input>
                     </div>
                 </div>
@@ -100,18 +101,14 @@
       <div id="oc_video-cc">
         <input id="oc_btn-cc" class="oc_btn-cc-off" type="submit" name="Closed Caption Off: Control + Alt + C" alt="Closed Caption Off: Control + Alt + C" title="Closed Caption Off: Control + Alt + C" value=""></input>
       </div>
-
       <div id="oc_video-size-controls" >
         <span id="oc_video-size-dropdown">
             <input id="oc_btn-dropdown" class="oc_btn-centerDisplay" type="submit" name="Video Size Controls" alt="Video Size Controls" title="Video Size Controls" value=""></input>
         </span>
-        <span id="oc_video-size-menue" style="float:right;visibility:hidden;">
+        <span id="oc_video-size-menue">
       </div>
     </div>
-    <div id="oc_player_video-dropdown" style="position:absolute; background-color:black;z-index:10000;visibility:hidden;">
-    </div>
-
-
+    <div id="oc_player_video-dropdown"></div>
 
     <div id="data"></div>
 
