MH-3869: increased the default size of the iframe to embed the review player and opencaps
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7781 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
@@ -222,7 +222,7 @@
           </td>
         </tr>
       </table>
-      <iframe id="holdActionPanel-iframe" src="">
+      <iframe id="holdActionPanel-iframe" src="" height="600px">
       </iframe>
     </div>
   </body>
