MH-4116 form validation wrt selected inputs of CA in ScheduleUI
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7784 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
@@ -101,6 +101,9 @@
                 <li id="missing-agent" class="missing-fields-item single-error multiple-error">
                   <span class="fl-icon inline-icon icon-bullet" title=""></span>Please choose a <a href="javascript:document.getElementById('agent').focus();">capture agent</a> to record the event.
                 </li>
+                <li id="missing-inputs" class="missing-fields-item single-error multiple-error">
+                  <span class="fl-icon inline-icon icon-bullet" title=""></span>You must choose at least one <a href="javascript:document.getElementById('input-list').focus();">input</a>.
+                </li>
                 <li id="error-recurstart-end" class="missing-fields-item multiple-error">
                   <span class="fl-icon inline-icon icon-bullet" title=""></span>Please choose an end date that occurs after the start date.
                 </li>
