MH-1732, Events now declare themselves as conflicting. MH-4354, a new series is now created if the search text did not find an existing series. Fixed bugs with series autocomplete. Fixed bug with recurring events agent tz handling. Fixed bug in /events/conflict rest endpoint. Fixed bug with notice pane display.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7818 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
@@ -131,6 +131,11 @@
                 <li id="notice-tzdiff" class="missing-fields-item" style="display:none;">
                   <span class="fl-icon inline-icon icon-bullet" title=""></span>The timezone for this <a href="javascript:document.getElementById('agent').focus();">capture agent</a> is <span id="tzdiff"></span>. Capture will occur according to the time local to the agent, though when you look at your list of Recordings it will be shown in your local time.
                 </li>
+                <li id="notice-conflict" class="missing-fields-item" style="display:none;">
+                  <span class="fl-icon inline-icon icon-bullet" title=""></span>The following events conflict with your scheduled time on your selected capture agent:
+                    <ul id="conflicting-events" style="margin-top: 0px;">
+                    </ul>
+                </li>
               </ul>
             </div>
           </div>
@@ -151,7 +156,7 @@
                     </div>
                   </li>
                   <li id="series_container">
-                    <label class="fl-label" for="series_select"  id="label-series"><span class="color-red">* </span><span id="i18n_series_label"></span>:</label>
+                    <label class="fl-label" for="series_select"  id="label-series"><span id="i18n_series_label"></span>:</label>
                     <input type="text" class="form-field ui-autocomplete-input" name="series_select" id="series_select">
                     <input type="hidden" id="series">
                     <span class="fl-icon icon-help"  id="help_series" title="Click for help"></span>
