--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
@@ -8,11 +8,44 @@
       #player-container {clear:both; border:none; width:90%; height:300;}
       #edit-link {float:right;margin-top:3px; margin-bottom:5px; margin-right:50px;}
       .hidden-initialy {display:none;}
+      #loading-container {
+        width:225px;
+        height:20px;
+        background-image: url(../../../admin/shared_img/loading.gif);
+        background-repeat: no-repeat;
+      }
     </style>
     <script type="text/javascript" src="../../../admin/jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript">
 
       var PLAYER_URL = '../../../engage/ui/embed.html';
+      
+      // Captions upload
+      var UploadListener = {};
+      UploadListener.filename = null;
+      UploadListener.mediaPackage = '';
+      UploadListener.flavor = 'captions/timedtext';
+      UploadListener.startUpload = function() {
+        if (UploadListener.filename != null) {
+          $('#upload-container').css('display','none');
+          $('#loading-container').css('display','table-cell');
+          var uploadFrame = document.getElementById("filechooser-ajax");
+          uploadFrame.contentWindow.document.uploadForm.flavor.value = UploadListener.flavor;
+          uploadFrame.contentWindow.document.uploadForm.mediaPackage.value = UploadListener.mediaPackage;
+          uploadFrame.contentWindow.document.uploadForm.elementType.value = 'catalog';
+          uploadFrame.contentWindow.document.uploadForm.submit();
+        }
+      }
+      UploadListener.fileSelectedAjax = function(filename, jobId) {
+        UploadListener.filename = filename;
+      }
+      UploadListener.uploadComplete = function () {
+        $('#loading-container').css('display','none');
+        $('#filename-container').text(UploadListener.filename).css('display','table-cell');
+        var uploadFrame = document.getElementById("filechooser-ajax");
+        var mp = uploadFrame.contentWindow.document.getElementById("mp").value;
+        //alert(mp);
+      }
 
       function xmlToString(doc) {
         if(typeof XMLSerializer != 'undefined'){
@@ -39,7 +72,7 @@
           success : function(data) {
             // put mediapackge into form (for upload of captions file)
             var mp = xmlToString(data).match(/<mediapackage(.*)mediapackage>/)[0];
-            $('#mediaPackage').val(mp);
+            UploadListener.mediaPackage = mp;
             // load metadata
             var catalogUrl = $(data.documentElement).find("mediapackage > metadata > catalog[type='dublincore/episode'] > url").text();
             $.ajax({
@@ -112,48 +145,49 @@
       <iframe id="player-container"></iframe>
     </center>
     <div id="metadata-container">
-      <form action="../../../ingest/rest/addCatalog" method="POST" enctype="multipart/form-data">
-        <ul class="no-bullets formField-list fl-controls-right">
-          <!-- captions files upload -->
-          <li class="ui-helper-clearfix">
-            <label class="fl-label"><span id="i18n_captions_upload_label">Upload a captions files</span>:</label>
-            <input type="hidden" name="falvor" value="captions/timedtext">
-            <input type="hidden" id="mediaPackage" name="mediaPackage" value="">
-            <input type="file" name="file">
-            <input type="submit" value="Upload file">
-          </li>
-          <!-- field: File -->
-          <li class="ui-helper-clearfix">
-            <label class="fl-label"><span id="i18n_files_label">File(s)</span>:</label>
-            <div id="files"></div>
-          </li>
-          <!-- field: Title -->
-          <li id="container-title" class="ui-helper-clearfix" style="display:none;">
-            <label class="fl-label"><span id="i18n_title_label">Title</span>:</label>
-            <span id="meta-title"></span>
-          </li>
-          <!-- field: Presenter -->
-          <li id="container-creator" class="ui-helper-clearfix" style="display:none;">
-            <label class="fl-label"><span id="i18n_presenter_label">Presenter(s)</span>:</label>
-            <span id="meta-creator"></span>
-          </li>
-          <!-- field: Series -->
-          <li id="container-isPartOf" class="ui-helper-clearfix" style="display:none;">
-            <label class="fl-label"><span id="i18n_dept_label">Series</span>:</label>
-            <span id="meta-isPartOf"></span>
-          </li>
-          <!-- field: Description -->
-          <li id="container-description" class="ui-helper-clearfix" style="display:none;">
-            <label class="fl-label"><span id="i18n_dept_label">Description</span>:</label>
-            <span id="meta-description"></span>
-          </li>
-          <!-- field: Distribution channels -->
-          <li id="container-dist" class="ui-helper-clearfix" style="display:none;">
-            <label class="fl-label"><span id="i18n_dept_label">Distribution channels</span>:</label>
-            <span id="meta-dist"></span>
-          </li>
-        </ul>
-      </form>
+      <ul class="no-bullets formField-list fl-controls-right">
+        <!-- captions files upload -->
+        <li class="ui-helper-clearfix">
+          <label class="fl-label"><span id="i18n_captions_upload_label">Captions file</span>:</label>
+          <div id="filename-container" class="hidden-initialy"></div>
+          <div id="loading-container" class="hidden-initialy"></div>
+          <div id="upload-container" style="display:table-cell;">
+            <iframe name="filechooserAjax" id="filechooser-ajax" frameborder="0" scrolling="no" src="../../../ingest/rest/filechooser-local.html" style="float:left;height:30px;width:400px;padding:0px;overflow:hidden;border:none;">
+            </iframe>
+            <button type="button" id="btn-start-upload" onclick="UploadListener.startUpload();">Upload</button>
+          </div>
+        </li>
+        <!-- field: File -->
+        <li class="ui-helper-clearfix">
+          <label class="fl-label"><span id="i18n_files_label">File(s)</span>:</label>
+          <div id="files"></div>
+        </li>
+        <!-- field: Title -->
+        <li id="container-title" class="ui-helper-clearfix" style="display:none;">
+          <label class="fl-label"><span id="i18n_title_label">Title</span>:</label>
+          <span id="meta-title"></span>
+        </li>
+        <!-- field: Presenter -->
+        <li id="container-creator" class="ui-helper-clearfix" style="display:none;">
+          <label class="fl-label"><span id="i18n_presenter_label">Presenter(s)</span>:</label>
+          <span id="meta-creator"></span>
+        </li>
+        <!-- field: Series -->
+        <li id="container-isPartOf" class="ui-helper-clearfix" style="display:none;">
+          <label class="fl-label"><span id="i18n_dept_label">Series</span>:</label>
+          <span id="meta-isPartOf"></span>
+        </li>
+        <!-- field: Description -->
+        <li id="container-description" class="ui-helper-clearfix" style="display:none;">
+          <label class="fl-label"><span id="i18n_dept_label">Description</span>:</label>
+          <span id="meta-description"></span>
+        </li>
+        <!-- field: Distribution channels -->
+        <li id="container-dist" class="ui-helper-clearfix" style="display:none;">
+          <label class="fl-label"><span id="i18n_dept_label">Distribution channels</span>:</label>
+          <span id="meta-dist"></span>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
