MH-2837: added error handling for failed upload / already present captions file
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7830 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
@@ -46,6 +46,12 @@
         var mp = uploadFrame.contentWindow.document.getElementById("mp").value;
         //alert(mp);
       }
+      UploadListener.uploadFailed = function() {
+        $('#loading-container').css('display','none');
+        $('#upload-container').css('display','table-cell');
+        $('#filechooser-ajax').attr('src','../../../ingest/rest/filechooser-local.html');
+        alert('The captions file could not be added');
+      }
 
       function xmlToString(doc) {
         if(typeof XMLSerializer != 'undefined'){
@@ -93,6 +99,15 @@
                   }
                 });
                 parent.Recordings.adjustHoldActionPanelHeight();
+              }
+            });
+            // look for already uploaded captions file
+            $(data.documentElement).find("mediapackage > metadata > catalog").each(function(index, elm) {
+              if ($(elm).attr('type') == 'captions/timedtext') {
+                var captionsFile = $(elm).find('url').text().split(/\//);
+                captionsFile = captionsFile[captionsFile.length-1];
+                $('#upload-container').css('display','none');
+                $('#filename-container').text(captionsFile).css('display','table-cell');
               }
             });
             // call preview player
