MH-4256 add style fixes for cross-browser related issues
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7867 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
@@ -121,12 +121,17 @@
     <div class="oc-holder">
       <div class="oc-search-bar-holder fl-helper-clearfix">&nbsp;
         <div class="oc-search-bar">
-        <span class="subscriptions">
-          <a id="rsslink" href="/feeds/rss/2.0/latest">RSS</a>&nbsp;|&nbsp;
-          <a id="atomlink" href="/feeds/atom/0.3/latest">ATOM</a>&nbsp;
-         </span>
-          <form action="index.html"><input id="searchField" type="text"
-                                           name="q" value="" /> <input id="searchSubmit" type="submit" value="Search" /></form>
+            <span class="subscriptions">
+                <a id="rsslink" href="/feeds/rss/2.0/latest">RSS</a>&nbsp;|&nbsp;
+                <a id="atomlink" href="/feeds/atom/0.3/latest">ATOM</a>
+            </span>
+            <br />
+            <span style="float:right">
+                <form action="index.html">
+                    <input id="searchField" type="text" name="q" value="" />
+                    <input id="searchSubmit" type="submit" value="Search" />
+                </form>
+            </span>
         </div>
       </div>
       <div class="oc-search-result-header">
@@ -134,16 +139,15 @@
         <div class="oc-sort-controls"></div>
       </div>
       <div style="padding-top:20px;">
-        <span class="title">Results</span>
-        <span style="float:right"><ul class="navigation"></span>
+        <span class="title" style="float:left">Results</span>
+        <span style="float:right"><ul class="navigation"></ul></span>
       </div>
       <div style="clear:both" class="oc-search-result-items">
         <div id="stage">loading results...</div>
-        <div>
-          <span class="title">Results</span>
-          <span style="float:right"><ul class="navigation"></span>
-        </div>
+      </div>
       <div>
+        <span class="title" style="float:left">Results</span>
+        <span style="float:right"><ul class="navigation"></ul></span>
       </div>
     </div>
   </body>
