MH-4256 added JS which cycles the background-color of the result rows in EngageUI
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7868 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
@@ -79,6 +79,12 @@
               $(this).attr("src", "img/thumbnail.png");
             }
           });
+          $(".oc-search-result-item").each(function(index) {
+            if(index % 2 ==1) {
+                $(this).css('background-color','#F7FBFC');
+            }
+          });
+          
         });
 
         if(searchQuery != null && searchQuery != ""){
@@ -89,6 +95,7 @@
           $('#atomlink').attr("href", "/feeds/atom/0.3/latest");
         }
       });
+      
 
     </script>
 
