--- a/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
@@ -53,8 +53,7 @@
   <!-- BODY -->
   <body>
     <div id="pageHeader">
-      <div id="currentVersion"></div>
-      <div id="newestVersion" style="text-align: right; float: right;"></div>
+    &nbsp;
     </div>
 
     <!-- notification that javaScript is disabled -->
@@ -74,18 +73,21 @@
         </div>
       </center>
     </noscript>
-
+    <!-- LOGO -->
+    <div class="oc_headerRow">
+        <a class="oc_headerLink" href="../../welcome.html">
+          <div class="mh-logo"><img src="shared_img/MatterhornLogo_80x57.png" alt="Opencast Matterhorn"/></div>
+          <div class="mh-heading"><h1>Admin Tools</h1></div>
+          <div class="oc-logo"><img src="shared_img/opencast_logo.gif" alt="Opencast Matterhorn"/></div>
+        </a>
+    </div>
     <!-- BEGIN of stage -->
     <!-- fl-centered doesn't work in winXP-IE8 -->
-    <div class="fl-container-850 fl-theme-coal">
-      <div style="margin-top: .5em">
-        <a href="../../welcome.html" style="text-decoration:none">
-          <h1><img src="shared_img/MatterhornLogo_80x57.png" alt="Opencast Matterhorn">&nbsp;&nbsp;Opencast Matterhorn</h1>
-        </a>
-      </div>
+    <div class="fl-container-850 fl-theme-coal" style="clear:both;">
       <ul class="fl-tabs fl-tabs-left" style="background-color: white;">
-        <li class="fl-activeTab"><a href="/admin/" id="i18n_tab_recording" id="i18n_tab_recording">Recordings</a></li>
-        <li class=""><a href="/admin/agents_status.html" id="i18n_tab_agent" id="i18n_tab_agent">Capture Agents</a></li>
+        <li id="oc_tabs" class="fl-activeTab"><a class="oc_tabs-active" href="recordings.html" id="i18n_tab_recording">Recordings</a></li>
+        <li id="oc_tabs"><a class="oc_tabs" href="series.html" id="i18n_tab_series">Series</a></li>
+        <li id="oc_tabs"><a  class="oc_tabs" href="agents_status.html" id="i18n_tab_agent">Capture Agents</a></li>
       </ul>
       <div id="stage" class="fl-tab-content wu-tab-content fl-fix" style="background:white;">
         <div class="fl-container-800" style="text-align: center;">
