MH-4576 fixed typo in confirmation screen in AdminUI
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7891 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/add_series.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/add_series.html
@@ -380,7 +380,7 @@
             <div class="data-label"></div>
             <div class="data-value">
               <a href="/admin/series.html" style="float: left;">&lt;&lt; Back to Series</a>
-              <a id="schedulerLink" href="/admin/scheduler.html" style="float: right;">Scheduler Recordings &gt;&gt;</a>
+              <a id="schedulerLink" href="/admin/scheduler.html" style="float: right;">Schedule Recordings &gt;&gt;</a>
             </div>
           </div>
         </div>
