MH-4484: fixed load issues for IE8 in EngageTools
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7910 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -84,10 +84,10 @@
       </div>
  
       <div id="oc_video-controls">
-  <span id="skip">
-    <a name="controls"></a>
-    <h2>Video Player Controls</h2>
-  </span>
+        <span id="skip">
+            <a name="controls"></a>
+            <h2>Video Player Controls</h2>
+        </span>
         <input id="oc_btn-skip-backward" class="oc_btn-skip-backward" type="submit" name="Jump To The Previous Slide" alt="Jump To The Previous Slide" title="Jump To The Previous Slide" value=""></input>
         <input id="oc_btn-rewind" class="oc_btn-rewind" type="submit" name="Jump Back: Control + Alt + R" alt="Jump Back: Control + Alt + R" title="Jump Back: Control + Alt + R" value=""></input>
         <input id="oc_btn-play-pause" class="oc_btn-play" type="submit" name="Play: Control + Alt + P"  alt="Play: Control + Alt + P" title="Play: Control + Alt + P" value=""></input>
@@ -119,7 +119,6 @@
         <span id="oc_video-size-dropdown">
             <input id="oc_btn-dropdown" class="oc_btn-centerDisplay" type="submit" name="Video Size Controls" alt="Video Size Controls" title="Video Size Controls" value=""></input>
         </span>
-        <span id="oc_video-size-menue">
       </div>
     </div>
     <div id="oc_player_video-dropdown"></div>
@@ -172,6 +171,7 @@
       <textarea id="oc_embed-textarea" class="oc_embed-textarea" rows="2" cols="1"></textarea>
     </div>
     
+  </div> 
   </body>
   
 </html>
