--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -170,8 +170,7 @@
       Choose your embed size. Copy the text and paste it in your html page. 
       <textarea id="oc_embed-textarea" class="oc_embed-textarea" rows="2" cols="1"></textarea>
     </div>
-    
   </div> 
+  <div id="segment-tooltip" class="segment-tooltip" style="display: none;"></div>
   </body>
-  
 </html>
