MH-2837: captions upload now functional
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7926 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
@@ -44,6 +44,7 @@
         $('#filename-container').text(UploadListener.filename).css('display','table-cell');
         var uploadFrame = document.getElementById("filechooser-ajax");
         var mp = uploadFrame.contentWindow.document.getElementById("mp").value;
+        parent.Recordings.changedMediaPackage = mp;
         //alert(mp);
       }
       UploadListener.uploadFailed = function() {
