MH-2353 change position of Skip-Links and add labels to search fields
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7931 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
@@ -135,6 +135,7 @@
             <br />
             <span style="float:right">
                 <form action="index.html">
+                    <label id="skip" for="searchField">Search Field</label>
                     <input id="searchField" type="text" name="q" value="" />
                     <input id="searchSubmit" type="submit" value="Search" />
                 </form>
